data-nosnippet for 'you need js' msg to exclude it from  google description

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>Fip Radio Lyrics</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <span data-nosnippet><noscript>You need to enable JavaScript to run this app.</noscript></span>
     <div id="root"></div>
     <!--
       This HTML file is a template.
